<resources>
    <string name="app_name">scorekeeper American Football</string>
    <string name="one_extra_point">+1 Extra Point</string>
    <string name="number">0</string>
    <string name="td">Touch Down</string>
    <string name="two_extra_points">+2 Extra Points</string>
    <string name="field_goal">Field Goal</string>
    <string name="safety">Safety</string>
    <string name="reset">Reset</string>
    <string name="team_red">Team Red</string>
    <string name="team_yellow">Team Yellow</string>
</resources>
