<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/one_extrapoint_btn2"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@android:color/background_light"
        android:text="@string/one_extra_point"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        android:onClick="teamYellowAddOne"
        app:layout_constraintBaseline_toBaselineOf="@+id/one_extrapoint_btn"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/red_score"
        android:layout_width="29dp"
        android:layout_height="53dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="18dp"
        android:text="@string/number"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/red_name"
        tools:text="0" />

    <TextView
        android:id="@+id/yellow_score"
        android:layout_width="29dp"
        android:layout_height="52dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/number"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        android:textStyle="bold"
        android:onClick="teamYellowScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yellow_name" />

    <Button
        android:id="@+id/td_button"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/background_light"
        android:text="@string/td"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:onClick="teamRedAddSix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/red_score" />

    <Button
        android:id="@+id/one_extrapoint_btn"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/background_light"
        android:text="@string/one_extra_point"
        android:onClick="teamRedAddOne"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/td_button" />

    <Button
        android:id="@+id/two_extrapoint_btn"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/background_light"
        android:text="@string/two_extra_points"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:onClick="teamRedAddTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_extrapoint_btn" />

    <Button
        android:id="@+id/two_extrapoint_btn2"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@android:color/background_light"
        android:text="@string/two_extra_points"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        android:onClick="teamYellowAddTwo"
        app:layout_constraintBaseline_toBaselineOf="@+id/two_extrapoint_btn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/fg2"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@android:color/background_light"
        android:text="@string/field_goal"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        android:onClick="teamYellowAddFg"
        app:layout_constraintBaseline_toBaselineOf="@+id/fg"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/fg"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/background_light"
        android:text="@string/field_goal"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        android:onClick="teamRedAddFg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/two_extrapoint_btn" />

    <Button
        android:id="@+id/safety_btn"
        android:layout_width="121dp"
        android:layout_height="47dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/background_light"
        android:text="@string/safety"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:onClick="teamRedAddSg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fg" />

    <Button
        android:id="@+id/safety_btn2"
        android:layout_width="121dp"
        android:layout_height="47dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@android:color/background_light"
        android:text="@string/safety"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        android:onClick="teamYellowAddSg"
        app:layout_constraintBaseline_toBaselineOf="@+id/safety_btn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/ylw_td_btn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@android:color/background_light"
        android:onClick="teamYellowAddSix"
        android:text="@string/td"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/td_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:background="@android:color/background_light"
        android:onClick="ResetAllScore"
        android:text="@string/reset"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/red_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/team_red"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yellow_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/team_yellow"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>